--- a/src/components/Label/label.css
+++ b/src/components/Label/label.css
@@ -1,5 +1,7 @@
 .h1 {
     font-size: 28px;
     font-weight: bold;
-    color: #16325c
+    margin: 5px;
+    color: var(--primary-color);
+    font-family: 'Robot', 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', sans-serif;
 }
