--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+:root {
+    --primary-color: #16325c;
+    --background-color: #eff2f9;
+    --gray: #8a98ad;
+    --blue: #2189e3
+}
+
 .App {
     text-align: center;
 }
@@ -14,7 +21,7 @@
 }
 
 .App-header {
-    background-color: #eff2f9;
+    background-color: var(--background-color);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
