--- a/src/containers/HomePage/homepage.css
+++ b/src/containers/HomePage/homepage.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
-    background-color: #eff2f9;
-    height: 100vh;
+    background-color: var(--background-color);
 }
 
 .charts {
